# ls-prior

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: package.yml
conda.recipe/: recipe.yaml
data/: LA_with_fibers_10.vtk  LA_with_fibers_3.vtk  LA_with_fibers_4.vtk  LA_with_fibers_5.vtk  LA_with_fibers_7.vtk  LA_with_fibers_8.vtk  LA_with_fibers_9.vtk  README.md  fiber_grid_max_depth8_point_threshold120.npy  left_atrium.ply
data/parameters/: params_1.npy  params_2.npy  params_3.npy  params_4.npy  params_5.npy  params_6.npy  params_7.npy
data/parameters/k100/: params_1.npy  params_2.npy  params_3.npy  params_4.npy  params_5.npy  params_6.npy  params_7.npy
data/parameters/k2/: params_1.npy  params_2.npy  params_3.npy  params_4.npy  params_5.npy  params_6.npy  params_7.npy
data/parameters/k20/: params_1.npy  params_2.npy  params_4.npy
data/parameters/k5/: params_1.npy  params_2.npy  params_3.npy  params_4.npy  params_5.npy  params_6.npy  params_7.npy
data/shape_model/: LA_with_fibers_1.vtk  LA_with_fibers_2.vtk  LA_with_fibers_6.vtk
examples/: 01_example_unit_square.py  02_example_sphere.py  03_example_atrium.py  04_example_conduction_velocity_tensor.py  example_atrium.py  example_conduction_velocity_tensor.py  example_map_scalars_via_uac.py  example_mean_fibers.py  example_sphere.py  example_unit_square.py  map_scalars_via_uac.py  mean_fibers.py  plot_fiber_field_in_UAC.py  sample_mean_covariance_unit_square.py
preprocessing/: compute_fiber_field_parameters.py  plot_fiber_field_in_UAC.py  prepare_mesh_file.py  prepare_shape_model_mesh_files.py
prior_fields/: converter.py  dtypes.py  plots.py  prior.py  utils.py
prior_fields/parameterization/: data_cleaning.py  fiber_grid.py  parameters.py  reader.py  tangent_space.py  transformer.py
prior_fields/parameterization/scripts/: 01_collect_data_on_uac_level.py  02a_compute_prior_parameters.py  02b_compute_uac_fiber_grid.py  03_compute_stats.py  04a_prior_plots_for_report.py  04b_other_plots_for_report.py
prior_fields/prior/: converter.py  dtypes.py  io.py  linalg.py  parameterization.py  plots.py  prior.py  random.py
prior_fields/tensor/: conduction_velocity.py  data_cleaning.py  fiber_grid.py  io.py  mapper.py  parameterization.py  parameters.py  plots.py  preprocessing.py  reader.py  tangent_space.py  tangent_space_coordinates.py  transformer.py  vector_heat_method.py
prior_fields/tensor/scripts/: 01_collect_data_on_uac_level.py  02a_compute_prior_parameters.py  02b_compute_uac_fiber_grid.py  04a_prior_plots_for_report.py  04b_other_plots_for_report.py  compute_prior_parameters.py  compute_stats.py  compute_uac_fiber_grid.py  other_plots_for_report.py  plots_for_report.py  prior_plots_for_report.py
tests/: test_prior.py  test_utils.py
tests/parameterization/: test_transformer.py
tests/prior/: test_converter.py  test_prior.py
tests/tensor/: test_data_cleaning.py  test_transformer.py
