[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "prior-fields"
description = "Implementation of a bi-Laplacian prior"
dynamic = ["version"]
authors = [{name = "Elisabeth Brockhaus", email = "elisabeth.brockhaus@student.kit.edu"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"


[project.urls]
repository = "https://gitlab.kit.edu/kit/scc-uq/members/kruse/master-thesis-elisabeth/prior-fields"


[tool.setuptools.packages.find]
include = ["prior_fields"]
namespaces = false

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]


[tool.pixi.dependencies]
pip = "*"
setuptools = ">=71.0.4,<72.1"
fenics = ">=2019.1.0,<2019.2"
matplotlib = ">=3.9.1,<3.9.2"
numpy = ">=1.26.4"
ipykernel = ">=6.29.5"
multimethod = ">=1.12,<2"
meshio = ">=5.3.5"
pytest = ">=8.3.2,<8.4"
mypy = ">=1.11.1,<1.12"
pre-commit = ">=3.8.0,<3.9"
typos = ">=1.23.6,<1.24"


[tool.pixi.pypi-dependencies]
potpourri3d = ">=1.1.0"
vedo = ">=2024.5.2"
# Install project in editable mode.
prior_fields = { path = ".", editable = true }


[tool.docformatter]
black = true


[tool.ruff]
line-length = 89
extend-include = ["*.ipynb"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.mypy]
python_version = '3.12'
no_implicit_optional = true
check_untyped_defs = true
disable_error_code = "import-untyped"
