[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "prior-fields"
description = "Implementation of a bi-Laplacian prior"
dynamic = ["version"]
authors = [{name = "Elisabeth Brockhaus", email = "elisabeth.brockhaus@student.kit.edu"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"


[project.urls]
repository = "https://gitlab.kit.edu/kit/scc-uq/projects/large-scale-bayesian-inversion/prior-fields/prior-fields-fenics"


[tool.setuptools.packages.find]
include = ["prior_fields"]
namespaces = false


# ------------------------------------------------------------------------------------- #
#                                          PIXI                                         #
# ------------------------------------------------------------------------------------- #

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.host-dependencies]
pip = "*"
setuptools = ">=71.0.4,<72.1"

[too.pixi.tasks]
postinstall = "pip install --no-build-isolation --no-deps --disable-pip-version-check -e ."

# ------------------------------------------------------------------------------------- #
#                                   PIXI DEPENDENCIES                                   #
# ------------------------------------------------------------------------------------- #

# ---------------------------- SHARED PACKAGE DEPENDENCIES ---------------------------- #

[tool.pixi.dependencies]
matplotlib = ">=3.9.1,<3.9.2"
numpy = ">=1.26.4"
meshio = ">=5.3.5"

# ------------------------------------ DEVELOPMENT ------------------------------------ #

[tool.pixi.feature.dev.dependencies]
ipykernel = ">=6.29.5"
ipywidgets = ">=8.1.5,<8.2"

# -------------------------------------- LINTING -------------------------------------- #

[tool.pixi.feature.lint.dependencies]
mypy = ">=1.11.1,<1.12"
pre-commit = ">=3.8.0,<3.9"
typos = ">=1.23.6,<1.24"

# --------------------------------------- PRIOR --------------------------------------- #

[tool.pixi.feature.prior.dependencies]
fenics = ">=2019.1.0,<2019.2"

[tool.pixi.feature.prior.pypi-dependencies]
vedo = ">=2024.5.2"

# -------------------------------------- TENSOR --------------------------------------- #

[tool.pixi.feature.tensor.pypi-dependencies]
potpourri3d = ">=1.1.0"

# -------------------------------------- TESTING -------------------------------------- #

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.2,<8.4"

# ------------------------------------------------------------------------------------- #
#                                   PIXI ENVIRONMENTS                                   #
# ------------------------------------------------------------------------------------- #

[tool.pixi.environments]
default = { features = ["dev", "lint", "prior", "tensor", "test"], solve-group = "default" }
prior = { features = ["prior"], solve-group = "default" }
tensor = { features = ["tensor"], solve-group = "default" }


# ------------------------------------------------------------------------------------- #
#                                     DOCFORMATTER                                      #
# ------------------------------------------------------------------------------------- #

[tool.docformatter]
black = true


# ------------------------------------------------------------------------------------- #
#                                         RUFF                                          #
# ------------------------------------------------------------------------------------- #

[tool.ruff]
line-length = 89
extend-include = ["*.ipynb"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"


# ------------------------------------------------------------------------------------- #
#                                         MYPY                                          #
# ------------------------------------------------------------------------------------- #

[tool.mypy]
python_version = '3.12'
no_implicit_optional = true
check_untyped_defs = true
disable_error_code = "import-untyped"
